--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -50,8 +50,26 @@
   width: 400px;
   height: 400px;
   object-fit: cover;
-  border-radius: 16px 16px 16px 16px;
-  margin-right: 200px;
+  border-radius: 16px;
   object-position: center -200px;
-  transform: scale(1.2); 
+}
+
+@media (max-width: 768px) {
+  .hero {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .hero-name {
+    font-size: 2.5rem;
+  }
+
+  .hero-image img {
+    width: 200px;
+    height: 200px;
+  }
+
+  .hero-buttons {
+    justify-content: center;
+  }
 }
